--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <div id="profile">
             <div id="profile-pic">
-                <img src="assets/images/profile.jpg" />
+                <img src="assets/images/bo.jpg" />
                 <p style="text-align:left;margin-top:-15px;">Picture taken by <a
                         href="http://www.columbia.edu/~hqh2101/">Huy Ha</a></p>
             </div>
