--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
 
             <div style="clear: both;"></div>
         </div>
+        <div class="section" id="awards">
+                <h1>Awards & Honor</h1>
+                <ul>
+                    <li> <b>2024</b> CCF Elite Collegiate Award
+                    <li> <b>2024</b> Outstanding Undergraduate Thesis of Southeast University
+                </ul>
+                <p></p>
+                <div style="clear: both;"></div>
+            </div>
+            <div class="section" id="services">
+                <h1>Sevices</h1>
+                <ul>
+                    Reviewer of AAAI 2024, IJCAI 2024, NeurIPS 2024
+                </ul>
+                <p></p>
+                <div style="clear: both;"></div>
+            </div>
+            <div style="clear: both;"></div>
+        </div>
         <!-- <div class="divider"></div>
         <div style="display:flex;flex-direction: column;">
             <h1>Projects</h1>
