--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div style="clear: both;"></div>
         </div>
         <div class="section" id="updates">
-            <h1>Updates</h1>
+            <h1>News</h1>
             <ul>
                 <li> <b>Aug 2024</b> My Homepage Starts!
             </ul>
@@ -51,14 +51,31 @@
         <div class="divider"></div>
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
-            <!-- <div>
-                <p>* indicates equal contribution</p>
-            </div> -->
+            <div>
+                <a href="https://yebo0216best.github.io/" style="height: 14em;" class="research-thumb">
+                    <img src="assets/images/lps.jpg"
+                        style=" margin-bottom:0px;"
+                        alt="">
+                </a>
+                <a href="https://yebo0216best.github.io/" class="research-proj-title">
+                    Bridging the Gap: Learning Pace Synchronization for Open-World Semi-Supervised Learning
+                </a>
+                <p>
+                    <a style="color:#000;" href="https://yebo0216best.github.io/"><b>Bo Ye</b></a>,
+                    <a style="color:#000;">Kai Gan</a>,
+                    <a style="color:#000;">Tong Wei</a>,
+                    <a style="color:#000;">Min-Ling Zhang</a>
+                    <br><em>International Joint Conference on Artificial Intelligence. <strong><i style="color:#1e90ff">IJCAI 2024</i></strong>.</em><br>
+                    <a href="https://github.com/yebo0216best/LPS-main">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/pdf/2309.11930">arXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                </p>
+            </div>
+
 
             <div style="clear: both;"></div>
         </div>
         <div class="section" id="awards">
-                <h1>Awards & Honor</h1>
+                <h1>Awards</h1>
                 <ul>
                     <li> <b>2024</b> CCF Elite Collegiate Award
                     <li> <b>2024</b> Outstanding Undergraduate Thesis of Southeast University
@@ -76,25 +93,8 @@
             </div>
             <div style="clear: both;"></div>
         </div>
-        <!-- <div class="divider"></div>
-        <div style="display:flex;flex-direction: column;">
-            <h1>Projects</h1>
-            <div>
-                <a href="soft-creatures/index.html" class="research-thumb"><img
-                        src="soft-creatures/gifs/elizabeth-hickey-small.gif" alt=""></a>
-                <a href="soft-creatures/index.html" class="research-proj-title">Coevolution of Morphology and Policy
-                    Implicit Neural Functions</a>
-                <p>
-                    <b>Huy Ha</b><br>
-                    <a href="https://github.com/huy-ha/coevolving-neural-networks">Github</a>,
-                    <a href="soft-creatures/index.html">Website</a>
-                </p>
-            </div>
-            <div style="clear: both;"></div>
-        </div> -->
+        
     </div>
-    <!-- <script src="js/pixi.min.js"></script> -->
-    <!-- <script src="js/profile-pic.js"></script> -->
 </body>
 
 </html>
