--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1>Research</h1>
             <div>
                 <a href="https://yebo0216best.github.io/" style="height: 14em;" class="research-thumb">
-                    <img src="assets/images/lps.jpg"
+                    <img src="assets/images/lps.png"
                         style=" margin-bottom:0px;"
                         alt="">
                 </a>
