--- a/index.html
+++ b/index.html
@@ -25,15 +25,20 @@
                 <div id="profile-name">Bo Ye 叶波</div>
                 <div id="profile-email">yeb at seu dot edu dot cn</div>
                 <p>
-                    I'm a Computer Science PhD student at Southeast University.
+                    I'm a Computer Science PhD student at Southeast University. 
+                    Currently, I am a first-year Computer Science Ph.D. student from School of Computer Science and Engineering in Southeast University, 
+                    advised by Prof. <a herf="https://palm.seu.edu.cn/zhangml/">Min-Ling Zhang</a> and Prof. <a herf="https://palm.seu.edu.cn/weit/">Tong Wei</a>. 
+                    Before this, I received my B.Sc. degree from School of Artificial Intelligence, Southeast University in July 2024.
                 </p>
                 <p>
-                    I'm fortunate to be advised by Professor Min-Ling Zhang and Professor Tong Wei.
-                    My research will focus on Machine Learning.
+                    My research interests include Machine Learning and Data Mining. Specifically, I am interested in Semi-Supervised Learning and Long-Tail Learning.
                 </p>
                 <div>
                     <a href="https://github.com/yebo0216best">
                         Github
+                    </a>
+                    <a href="https://scholar.google.com/citations?user=LCjCYpkAAAAJ&hl=en">
+                        Google Scholar
                     </a>
                     </a>
                 </div>
