--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>
                     <a href="https://github.com/yebo0216best">
                         Github
-                    </a>
+                    </a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://scholar.google.com/citations?user=LCjCYpkAAAAJ&hl=en">
                         Google Scholar
                     </a>
@@ -71,7 +71,7 @@
                     <a style="color:#000;">Min-Ling Zhang</a>
                     <br><em>International Joint Conference on Artificial Intelligence. <strong><i style="color:#1e90ff">IJCAI 2024</i></strong>.</em><br>
                     <a href="https://github.com/yebo0216best/LPS-main">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/pdf/2309.11930">arXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/pdf/2309.11930">arXiv</a>
                 </p>
             </div>
 
