--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div style="width:1000px;margin: 0px auto;">
         <header id="header" width="400px" style="display:flex;justify-content: space-around;">
             <a href="#profile-intro">Home</a>
-            <a href="#updates">Updates</a>
+            <a href="#updates">News</a>
             <a href="#research">Research</a>
             <!-- <a href="#projects">Projects</a> -->
         </header>
