--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 <img src="assets/images/bo.jpg" />
             </div>
             <div id="profile-intro">
-                <div id="profile-name">Bo Ye 叶波</div>
-                <div id="profile-email">yeb at seu dot edu dot cn</div>
+                <div id="profile-name">Bo Ye(叶波)</div>
+                <div id="profile-email">yeb@seu.edu.cn</div>
                 <p>
                     Currently, I am a first-year Computer Science Ph.D. student from School of Computer Science and Engineering in Southeast University, 
                     advised by Prof. <a herf="https://palm.seu.edu.cn/zhangml/">Min-Ling Zhang</a> and Prof. <a herf="https://palm.seu.edu.cn/weit/">Tong Wei</a>. 
                     Before this, I received my B.Sc. degree from School of Artificial Intelligence, Southeast University in July 2024.
                 </p>
                 <p>
-                    My research interests include Machine Learning and Data Mining. Specifically, I am interested in Semi-Supervised Learning and Long-Tail Learning.
+                    My research interests include Machine Learning, Data Mining and Computer Vision. Specifically, I am interested in Semi-Supervised Learning, Long-Tail Learning and Diffusion Models.
                 </p>
                 <div>
                     <a href="https://github.com/yebo0216best">
@@ -71,7 +71,7 @@
                     <a style="color:#000;">Min-Ling Zhang</a>
                     <br><em>International Joint Conference on Artificial Intelligence. <strong><i style="color:#1e90ff">IJCAI 2024</i></strong>.</em><br>
                     <a href="https://github.com/yebo0216best/LPS-main">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/pdf/2309.11930">arXiv</a>
+                    <a href="https://arxiv.org/pdf/2309.11930">Paper</a>
                 </p>
             </div>
 
@@ -90,7 +90,7 @@
             <div class="section" id="services">
                 <h1>Sevices</h1>
                 <ul>
-                    Reviewer of AAAI 2024, IJCAI 2024, NeurIPS 2024
+                    Reviewer / PC Member: AAAI 2024, IJCAI 2024, NeurIPS 2024, ICLR 2025
                 </ul>
                 <p></p>
                 <div style="clear: both;"></div>
