--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="profile-email">yeb@seu.edu.cn</div>
                 <p>
                     Currently, I am a first-year Computer Science Ph.D. student from School of Computer Science and Engineering in Southeast University, 
-                    advised by Prof. <a herf="https://palm.seu.edu.cn/zhangml/">Min-Ling Zhang</a> and Prof. <a herf="https://palm.seu.edu.cn/weit/">Tong Wei</a>. 
+                    advised by Prof. <a herf="https://scholar.google.com/citations?user=uFHCIM0AAAAJ&hl=en&oi=ao">Min-Ling Zhang</a> and Prof. <a herf="https://scholar.google.com/citations?user=EFCZuW4AAAAJ&hl=en&oi=ao">Tong Wei</a>. 
                     Before this, I received my B.Sc. degree from School of Artificial Intelligence, Southeast University in July 2024.
                 </p>
                 <p>
