--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <a style="color:#000;">Tong Wei</a>,
                     <a style="color:#000;">Min-Ling Zhang</a>
                     <br><em>International Joint Conference on Artificial Intelligence. <strong><i style="color:#1e90ff">IJCAI 2024</i></strong>.</em><br>
-                    <a href="https://github.com/yebo0216best/LPS-main">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://github.com/yebo0216best/LPS-main">Code</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/pdf/2309.11930">Paper</a>
                 </p>
             </div>
